hphp/hack/test/typecheck/reified_generics/valid_targ_wildcard_hint.php.exp
File "valid_targ_wildcard_hint.php", line 9, characters 30-30:
Wildcard typehints are not allowed in this position (Naming[2084])
File "valid_targ_wildcard_hint.php", line 9, characters 19-19:
Wildcard typehints are not allowed in this position (Naming[2084])
File "valid_targ_wildcard_hint.php", line 6, characters 19-19:
Wildcard typehints are not allowed in this position (Naming[2084])
File "valid_targ_wildcard_hint.php", line 7, characters 21-21:
Wildcard typehints are not allowed in this position (Naming[2084])
